--- a/client/src/app/components/error/error.component.html
+++ b/client/src/app/components/error/error.component.html
@@ -5,6 +5,7 @@
         </div>
         <h2>404 - Página no encontrada</h2>
         <p>La página que estás buscando podría haberse eliminado o no está disponible temporalmente.</p>
-        <a routerLink="/home">Ir al inicio</a>
+        <button (click)="backClick()" class="btn">Volver</button>
+        <button class="btn" routerLink="/home">Ir al inicio</button>
     </div>
 </div>
