--- a/client/src/app/components/user/home/home.component.html
+++ b/client/src/app/components/user/home/home.component.html
@@ -19,7 +19,7 @@
                         <img src="../../../../assets/enigroom-icono-reserva.png" alt="">
                     </div>
                     <div class="imgButton">
-                        <a class="btn btn-outline-light mt-auto" href="">Ver Reserva</a>
+                        <a class="btn btn-outline-light mt-auto" routerLink="/active">Tus reservas activas</a>
                     </div>
                 </div>
             </td>
