--- a/client/src/app/components/partials/navigation/navigation.component.html
+++ b/client/src/app/components/partials/navigation/navigation.component.html
@@ -15,13 +15,13 @@
                 <a class="nav-link" routerLink="/home">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Historial</a>
+                <a class="nav-link" routerLink="/history">Historial</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Canchas</a>
+                <a class="nav-link" routerLink="/fields">Canchas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Acerca</a>
+                <a class="nav-link" routerLink="/about">Acerca</a>
             </li>
         </ul>
     </div>
