--- a/client/src/app/components/reservation/history/history.component.html
+++ b/client/src/app/components/reservation/history/history.component.html
@@ -8,13 +8,13 @@
 
     <div class="container">
         <div class="activeReservation" *ngIf="historyReservationInfo == ''">
-            <h1 align="center" style="color: white;">Historial de reservas</h1>
+            <h1 align="center" style="color: white;"><u>Historial de reservas</u></h1>
             <br>
-            <h1 align="center" style="color: white;">Aún no has hecho ninguna reserva. <a routerLink="/reservation">Ir a reservar</a></h1>
+            <h3 align="center" style="color: white;">Aún no has hecho ninguna reserva. <a routerLink="/reservation">Ir a reservar</a></h3>
         </div>
         
         <div class="activeReservation" *ngIf="historyReservationInfo">
-            <h1 align="center" style="color: white;">Historial de reservas</h1>
+            <h1 align="center" style="color: white;"><u>Historial de reservas</u></h1>
             <br>
             <div class="card" *ngFor="let history of historyReservationInfo; let i = index">
                 <button type="button" class="btn btn-success" (click)="isCollapsed[i] = !isCollapsed[i]">
